# mldesign_itmo

./: .pre-commit-config.yaml  README.md  pyproject.toml
docs/: ml_system_design_doc.md
focus/: __init__.py  __main__.py  app.py  routes.py  struct.py
focus/modules/: alg_parser.py  cls.py  cls_cfg.py  cls_clear_text.py  field.py  field_patterns.py  handler.py  ner.py  pattern_cls.py  target_text.py
focus/modules/txt_lab/: __init__.py  core.py  struct.py
notebooks/: 1-1_raw-proc_data-review.ipynb  1-2_raw-proc_pat-classification.ipynb  2-1_ner_model-training.ipynb  3-1_msg-cls_baseline_hypo-1.ipynb
