[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
extend-exclude = ["notebooks", "data"]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.ruff.format]
preview = true

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
allow_redefinition = true
exclude = "notebooks"

[tool.isort]
profile = "black"
line_length = 100
[project]
name = "mldesign_itmo"
version = "0.1.0"
description = ""
authors = [
    {name = "Vera",email = "vera.ivanova204@gmail.ru"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "uvicorn==0.37.0",
    "fastapi==0.118.0",
    "pydantic==2.11.9",
    "loguru==0.7.3",
    "transformers==4.57.0",

    # PyTorch CPU
    "torch==2.8.0",
    "torchvision==0.23.0",
]
